Finjustera årsmötessida 2026 och uppdatera logoreferenser

--- a/frontend/Inlägg Index/arsmote-2026.html
+++ b/frontend/Inlägg Index/arsmote-2026.html
@@ -2,11 +2,15 @@
   <div style="max-width:597px;margin:0 auto;padding:20px 16px 24px 16px;">
 
     <div style="text-align:center;margin-bottom:18px;">
-      <div style="width:100%;height:132px;border-radius:14px;overflow:hidden;border:1px solid #d9e8f4;box-shadow:0 6px 14px rgba(0,0,0,0.06);margin-bottom:12px;">
+      <div style="width:100%;height:148px;border-radius:14px;overflow:hidden;border:1px solid #d9e8f4;box-shadow:0 6px 14px rgba(0,0,0,0.06);margin-bottom:12px;position:relative;">
         <img src="https://cdn.sportadmin.se/699/h/253/b5af07acab07353551df3caf164f54a318d3e2f900d28bf9638c255363ed6492_L.jpg" alt="" style="width:100%;height:100%;object-fit:cover;object-position:center 42%;opacity:0.88;">
+        <div style="position:absolute;left:0;right:0;bottom:0;height:44%;background:linear-gradient(180deg,rgba(8,45,74,0) 0%,rgba(8,45,74,0.18) 100%);pointer-events:none;"></div>
+        <img src="https://cdn.sportadmin.se/699/h/253/f76b3ec1fcf0904d98ef45fd1ba04000e8dc40ccd90c051d5bfb81d5d157cad0_L.png" alt="" style="position:absolute;right:10px;bottom:8px;width:42px;height:42px;object-fit:contain;opacity:0.16;pointer-events:none;">
       </div>
 
-      <div style="font-size:11px;letter-spacing:2.5px;text-transform:uppercase;color:#005a99;margin-bottom:10px;">Ljungby Simsällskap presenterar</div>
+      <div style="display:flex;align-items:center;justify-content:center;gap:8px;margin-bottom:10px;">
+        <div style="font-size:11px;letter-spacing:2.5px;text-transform:uppercase;color:#005a99;">Ljungby Simsällskap presenterar</div>
+      </div>
 
       <h2 style="margin:0;font-size:34px;line-height:1.05;font-weight:900;color:#003a66;letter-spacing:0.5px;">ÅRSMÖTE 2026</h2>
 
@@ -31,9 +35,10 @@
       <p style="font-size:15px;line-height:1.7;margin:0 0 16px 0;color:#365a75;font-weight:400;">Din möjlighet att forma riktningen framåt för Ljungby Simsällskap. För våra barn, våra simmare och vår förening.</p>
 
       <div style="text-align:center;">
-        <div style="font-size:12px;color:#5b7c96;margin-bottom:10px;letter-spacing:0.3px;">Det tar mindre än 1 minut.</div>
+        <div style="font-size:12px;color:#5b7c96;margin-bottom:8px;letter-spacing:0.2px;">Klicka på knappen eller skanna QR-koden.</div>
         <div style="display:flex;align-items:center;justify-content:center;gap:10px;flex-wrap:wrap;">
-          <a href="https://forms.cloud.microsoft/r/8YjQ4APNRf?origin=lprLink" target="_blank" style="display:inline-block;background:#005a99;color:#ffffff;text-decoration:none;padding:14px 24px;border-radius:30px;font-size:15px;font-weight:900;box-shadow:0 5px 0 #003a66;letter-spacing:0.6px;">SÄKRA DIN PLATS 🏊</a>
+          <a href="https://forms.cloud.microsoft/r/8YjQ4APNRf?origin=lprLink" target="_blank" style="display:inline-block;background:#005a99;color:#ffffff;text-decoration:none;padding:14px 24px;border-radius:30px;font-size:15px;font-weight:900;box-shadow:0 5px 0 #003a66;letter-spacing:0.3px;">Anmäl dig här</a>
+          <span style="font-size:13px;color:#5b7c96;font-weight:700;">eller</span>
           <a href="https://forms.cloud.microsoft/r/8YjQ4APNRf?origin=lprLink" target="_blank" style="display:inline-flex;align-items:center;justify-content:center;background:#ffffff;border:1px solid #dbe8f3;border-radius:12px;padding:6px;box-shadow:0 4px 10px rgba(0,0,0,0.04);text-decoration:none;">
             <img src="https://cdn.sportadmin.se/699/h/253/35f729162e09e0f87369bb12265e8b8128a9653ff96416422178d066e14810c9_L.png" alt="QR-kod till anmälan" style="width:74px;height:74px;border-radius:8px;display:block;object-fit:cover;">
           </a>
@@ -43,10 +48,22 @@
     </div>
 
     <div style="background:#f7fbff;border-radius:16px;padding:14px 16px;margin-bottom:16px;font-size:14px;line-height:1.65;border:1px solid #e3eef7;color:#365a75;">
-      <p style="margin:0 0 8px 0;font-size:13px;font-weight:800;color:#005a99;letter-spacing:0.03em;text-transform:uppercase;">Praktisk information</p>
-      <p style="margin:0 0 8px 0;">📍 SP Arena - Konferensdelen (1 trappa upp) - <a href="https://www.google.com/maps/search/SP+Arena+Ljungby" target="_blank" style="color:#005a99;text-decoration:none;font-weight:700;">Visa på karta</a></p>
-      <p style="margin:0 0 8px 0;">🗓 Motioner mejlas till <a href="mailto:info@ljungbyss.se" style="color:#005a99;text-decoration:none;font-weight:700;">info@ljungbyss.se</a> senast 15 mars.</p>
-      <p style="margin:0;">🍽 2-rätters middag ingår - ange allergier i anmälan.</p>
+      <p style="margin:0 0 10px 0;font-size:13px;font-weight:800;color:#005a99;letter-spacing:0.03em;text-transform:uppercase;">Praktisk information</p>
+
+      <div style="display:flex;align-items:flex-start;gap:8px;margin:0 0 8px 0;">
+        <span style="font-size:20px;line-height:1;display:inline-block;width:20px;text-align:center;">📍</span>
+        <p style="margin:0;">Plats: SP Arena - Konferensdelen (1 trappa upp) - <a href="https://www.google.com/maps/search/SP+Arena+Ljungby" target="_blank" style="color:#005a99;text-decoration:none;font-weight:700;">Visa på karta</a></p>
+      </div>
+
+      <div style="display:flex;align-items:flex-start;gap:8px;margin:0 0 8px 0;">
+        <span style="font-size:20px;line-height:1;display:inline-block;width:20px;text-align:center;">🗓</span>
+        <p style="margin:0;"><strong>Motioner/förslag:</strong> Är du medlem i klubben kan du lämna in motioner till årsmötet.<br>Maila till <a href="mailto:info@ljungbyss.se" style="color:#005a99;text-decoration:none;font-weight:700;">info@ljungbyss.se</a> senast söndag 15 mars 2026.</p>
+      </div>
+
+      <div style="display:flex;align-items:flex-start;gap:8px;margin:0;">
+        <span style="font-size:20px;line-height:1;display:inline-block;width:20px;text-align:center;">🍴</span>
+        <p style="margin:0;">2-rätters middag ingår - ange allergier i anmälan.</p>
+      </div>
     </div>
 
     <div style="margin-top:12px;">
